<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="29dp"
        />
    <EditText
        android:id="@+id/username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/userphonenumber_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            />
        <com.xiaobo.smartcalendar.Public.VerifyCodeButton
            android:id="@+id/button_vcode"
            android:layout_width="110dp"
            android:layout_height="36dp"
            android:background="@drawable/button_circle_shape"
            android:gravity="center"
            android:text="@string/send_code"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_alignParentRight="true"
            app:vcb_afterCountdownText="@string/reacquire"
            app:vcb_clickAfterBackground="@drawable/button_code_click_after"
            app:vcb_countdownTime="60"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/vcode_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verificationcode"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/confirmpassword_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        />

</LinearLayout>